// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createHistoryObj Returns multiples for quantity > 1 1`] = `
Array [
  Object {
    "action": "Open",
    "amount": 22.5,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.5,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Buy",
    "strike": 180,
    "underlying": "AAPL",
  },
  Object {
    "action": "Open",
    "amount": 22.5,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.5,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Buy",
    "strike": 180,
    "underlying": "AAPL",
  },
]
`;

exports[`createHistoryObj Works for list of history objects 1`] = `
Array [
  Object {
    "action": "Open",
    "amount": 22.5,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.5,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Buy",
    "strike": 180,
    "underlying": "AAPL",
  },
  Object {
    "action": "Open",
    "amount": 22.5,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.5,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Buy",
    "strike": 180,
    "underlying": "AAPL",
  },
  Object {
    "action": "Close",
    "amount": 45,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 1,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Sell",
    "strike": 180,
    "underlying": "TSLA",
  },
  Object {
    "action": "Open",
    "amount": 9,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.2,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Sell",
    "strike": 180,
    "underlying": "MSFT",
  },
  Object {
    "action": "Open",
    "amount": 9,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.2,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Sell",
    "strike": 180,
    "underlying": "MSFT",
  },
  Object {
    "action": "Open",
    "amount": 9,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.2,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Sell",
    "strike": 180,
    "underlying": "MSFT",
  },
  Object {
    "action": "Open",
    "amount": 9,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.2,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Sell",
    "strike": 180,
    "underlying": "MSFT",
  },
  Object {
    "action": "Open",
    "amount": 9,
    "date": 2021-01-01T00:00:00.000Z,
    "expiration": "2022-01-01",
    "fees": 0.2,
    "optionType": "Call",
    "price": 0.45,
    "quantity": 1,
    "side": "Sell",
    "strike": 180,
    "underlying": "MSFT",
  },
]
`;
